--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
+:root{
+    box-sizing: border-box;
+}
+
+*,
+::before,
+::after{
+    box-sizing: inherit;
+}
+body{
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: #eee;
+}
+body *+*{
+     margin-top: 1.5em;
+}
+
 .main {
     display: grid;
     grid-template-columns: 80px auto 40px;
