--- a/src/styles.css
+++ b/src/styles.css
@@ -14,8 +14,13 @@ body{
 body *+*{
      margin-top: 1.5em;
 }
+.container{
+    max-width: 1080px;
+    margin: 0 auto;
+}
 
 .main {
-    display: grid;
-    grid-template-columns: 80px auto 40px;
+    padding: 0 1.5em;
+    background-color: #fff;
+    border-radius: .5em;
 }
